--- a/bottles-cli-concept.html
+++ b/bottles-cli-concept.html
@@ -2,7 +2,7 @@
     body {
         background-color: #252525;
         color: #dedede;
-        font-family: Cantarell;
+        font-family: "Cantarell", "Ubuntu", sans-serif;
     }
 
     div {
